--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$A9uYgG53q59ffQ116eSFyOV3rDgMQet8AuFN1dOpuNMGpwtlOJMl2"
+# 	- password: java.lang.String = "$2a$05$Sekr/jDff4atxVvTx0spBeL4/zHyeOhKFoClqZm30vm6s6.rrBIfa"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$FsEKoHak47L9xlnQ/P/YmOdM4KlCkbTol86PgcythwqiEzHoJkos2"
+# 	- password: java.lang.String = "$2a$05$aI6pzmKOlxSC0jO4945fKueqcQ/TLzIJkqux4zswzMuGQxq55raGe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$Giy.oVvwPYBTdxE2hoG3QuOERzU64VWgRhUC7lCSVuWMbJlUeodVu"
+# 	- password: java.lang.String = "$2a$05$VqSRSmkNIKd5qoc5bJvb4OFd3DDiZcfg2zjTujZyp47bx5hI5OEhm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$fpZlOdol0UA4fuq6/opbjuEy2QE1wsg3WJ6JF1N675BUaShcetok6"
+# 	- password: java.lang.String = "$2a$05$Zn6uyv2JHUbRWbqxxNDs1eoWJgawbIBmTqXYa512NsHXUPvVS7s56"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$h4O2f3akEQTFzaHLIi7CzOWNW68MUEwmW.aTU5thRjRr9xOytFqgW"
+# 	- password: java.lang.String = "$2a$05$cJf2KWt/HbLRAeUpQDkGgurbfYBBuR8QMhPuZEDTX/Uc.ltyQW6uG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$i/E9JXW2mRS5d/MCmqi/Uu/0nX2LtXXUrnHDkkldkiX/DZhei6LCe"
+# 	- password: java.lang.String = "$2a$05$M10kOrrumdx8LBFKaRMO.O17K3R5Pexb.lrJhMC4mhBrkb/Sp5aBO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$ITGT2M2lzUcgBAbuEXUuKenPRxV.koFv765QixucQYGJxrjzHCyXi"
+# 	- password: java.lang.String = "$2a$05$PQCr0UebT1ZC.swxyJA95.2Qv5cePFWEhtTmAT8AsD0G4kh6iBHJ6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$WqZY/RKhstKAA0VJL96guuPTUv5ds2Fqiw7NJAemN7IQARcQSmLAa"
+# 	- password: java.lang.String = "$2a$05$TTDuqeK3KqUbHKNiJJKyYORJsxcscgWCifxGnG3SPIPa0geE4U1F2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$8zucuJi6nyJ2Ca2Ui3omxOVlRiyiQRdh9GiJk/sFjlFIYULuKpUO6"
+# 	- password: java.lang.String = "$2a$05$Ny1BXygLY9Pod/Km.6ZSkO8bv7JJ6gpEA6JdNAyQ8FO5YsdEQvmMe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$1x9Rlfn0a2bIPrC6Fk9ai.FtXB4Nhukr18t1jVP6Su2S959akLXMm"
+# 	- password: java.lang.String = "$2a$05$jjJsqrsHc8KbvsO.q6/dee7EmyASHKo0cGYp.9OJWLJCwnZXhkOT6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$2SYKCE73Z2oakkvRlHKyQuvszpsoDMUhqnyVwH1HcUCwZErH3y4Wq"
+# 	- password: java.lang.String = "$2a$05$kV0NC8HZV/AkNojSjsaJCu0vbK9q5Raor0eDiLdfTO/zp.RuyX8Xa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
@@ -1252,7 +1252,7 @@ Job01=79
 # 	- salary: acme.framework.datatypes.Money = <<EUR 501.20>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=94, version=0}
-# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = acme.entities.challengeTest.ChallengeTest{id=114, version=0}
+# 	- ejuno: acme.entities.ejuno.Ejuno = acme.entities.ejuno.Ejuno{id=114, version=0}
 
 Job02=80
 
@@ -1272,7 +1272,7 @@ Job02=80
 # 	- salary: acme.framework.datatypes.Money = <<EUR 500.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=95, version=0}
-# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = null
+# 	- ejuno: acme.entities.ejuno.Ejuno = null
 
 Job03=81
 
@@ -1292,7 +1292,7 @@ Job03=81
 # 	- salary: acme.framework.datatypes.Money = <<EUR 400.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=96, version=0}
-# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = null
+# 	- ejuno: acme.entities.ejuno.Ejuno = null
 
 Job04=82
 
@@ -1312,7 +1312,7 @@ Job04=82
 # 	- salary: acme.framework.datatypes.Money = <<EUR 501.20>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=19, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=97, version=0}
-# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = null
+# 	- ejuno: acme.entities.ejuno.Ejuno = null
 
 Job05=83
 
@@ -1332,7 +1332,7 @@ Job05=83
 # 	- salary: acme.framework.datatypes.Money = <<EUR 5000.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=19, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=98, version=0}
-# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = null
+# 	- ejuno: acme.entities.ejuno.Ejuno = null
 
 Job06=84
 
@@ -1352,7 +1352,7 @@ Job06=84
 # 	- salary: acme.framework.datatypes.Money = <<EUR 5000.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=99, version=0}
-# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = null
+# 	- ejuno: acme.entities.ejuno.Ejuno = null
 
 Duty01=85
 
@@ -1809,15 +1809,15 @@ Justification02=113
 # 	- reason: java.lang.String = "No me gusta esta peticion 2"
 # 	- application: acme.entities.application.Application = acme.entities.application.Application{id=110, version=0}
 
-CTest1=114
+Ejuno01=114
 
-# acme.entities.challengeTest.ChallengeTest{id=114, version=0}
+# acme.entities.ejuno.Ejuno{id=114, version=0}
 # 	from java.lang.Object:
 # 	from acme.framework.entities.DomainEntity:
 # 	- serialVersionUID: long = 1
 # 	- id: int = 114
 # 	- version: int = 0
-# 	from acme.entities.challengeTest.ChallengeTest:
+# 	from acme.entities.ejuno.Ejuno:
 # 	- serialVersionUID: long = 1
 # 	- pText: java.lang.String = "Hola"
 # 	- moreInfo2: java.lang.String = "hola otra ve"
