--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$Sekr/jDff4atxVvTx0spBeL4/zHyeOhKFoClqZm30vm6s6.rrBIfa"
+# 	- password: java.lang.String = "$2a$05$pJwz1QoEYTFAvkrM3lNhvu8vV4YaIWjTo6NKlT66x5HVKSSF99pCG"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$aI6pzmKOlxSC0jO4945fKueqcQ/TLzIJkqux4zswzMuGQxq55raGe"
+# 	- password: java.lang.String = "$2a$05$bCcyGmd8f9vmzRDa8DFuy.fxX.QI3cEiDimjiIPQHHj2mgoy9h.dm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$VqSRSmkNIKd5qoc5bJvb4OFd3DDiZcfg2zjTujZyp47bx5hI5OEhm"
+# 	- password: java.lang.String = "$2a$05$L59.Awnm0GCZ9FG1Qozm0eca6AXCGgxA6w1w3XC/inr8jkq.WT0x6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$Zn6uyv2JHUbRWbqxxNDs1eoWJgawbIBmTqXYa512NsHXUPvVS7s56"
+# 	- password: java.lang.String = "$2a$05$EAPI06/kDzCYHe/Lx1NOKevyJXD2KpPNRkRMjLXr1.aUeMcjaaQ3."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$cJf2KWt/HbLRAeUpQDkGgurbfYBBuR8QMhPuZEDTX/Uc.ltyQW6uG"
+# 	- password: java.lang.String = "$2a$05$WT4XcJusW8oAZPS2qS2G5eNqmWOIW1ScQ3BnjxIh3zUlV5GwL.Foq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$M10kOrrumdx8LBFKaRMO.O17K3R5Pexb.lrJhMC4mhBrkb/Sp5aBO"
+# 	- password: java.lang.String = "$2a$05$X0pU7MxaWlAG5eYoiHRdwObIuguMIK26SGuyu1IJEnFg.VQO0ILDu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$PQCr0UebT1ZC.swxyJA95.2Qv5cePFWEhtTmAT8AsD0G4kh6iBHJ6"
+# 	- password: java.lang.String = "$2a$05$Eq/0IbNf98c41bqOnU1hv.vp0VhaLYCP9HWlAaFzTJybvG5bCj3gS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$TTDuqeK3KqUbHKNiJJKyYORJsxcscgWCifxGnG3SPIPa0geE4U1F2"
+# 	- password: java.lang.String = "$2a$05$8MSL4JMoLkPrWsTOESkZfOYmZINVDD4/oU.pG3v0nSKx1iF1fzATC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$Ny1BXygLY9Pod/Km.6ZSkO8bv7JJ6gpEA6JdNAyQ8FO5YsdEQvmMe"
+# 	- password: java.lang.String = "$2a$05$ZZ/RL65bQSgRunoom6cn7uTeZoQ9njUNwPI.kRC4j.c7hzcBTMpGe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$jjJsqrsHc8KbvsO.q6/dee7EmyASHKo0cGYp.9OJWLJCwnZXhkOT6"
+# 	- password: java.lang.String = "$2a$05$710VM8JIchtL7TnIZPWmpunqFJ4YVPUjhwjzFPieE/Ds8MB539nNG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$kV0NC8HZV/AkNojSjsaJCu0vbK9q5Raor0eDiLdfTO/zp.RuyX8Xa"
+# 	- password: java.lang.String = "$2a$05$OcIrBAP1BAo0Wn1HucMriOU99C0ELBNchHIwkHRdc.A6lE6xGIv1C"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
@@ -1822,6 +1822,7 @@ Ejuno01=114
 # 	- pText: java.lang.String = "Hola"
 # 	- moreInfo2: java.lang.String = "hola otra ve"
 # 	- Job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=79, version=1}
+# 	- password: acme.entities.password.Password = acme.entities.password.Password{id=117, version=0}
 
 Ejdos01=115
 
@@ -1834,7 +1835,6 @@ Ejdos01=115
 # 	from acme.entities.ejdos.Ejdos:
 # 	- serialVersionUID: long = 1
 # 	@ respuesta: java.lang.String = "Hola"
-# 	@ xxxx: java.lang.String = "hola otra ve"
 # 	@ protec: java.lang.String = "protec"
 # 	- application: acme.entities.application.Application = acme.entities.application.Application{id=105, version=0}
 
@@ -1849,7 +1849,19 @@ Ejdos02=116
 # 	from acme.entities.ejdos.Ejdos:
 # 	- serialVersionUID: long = 1
 # 	@ respuesta: java.lang.String = "Hola"
-# 	@ xxxx: java.lang.String = "hola otra ve"
 # 	@ protec: java.lang.String = "protec"
 # 	- application: acme.entities.application.Application = acme.entities.application.Application{id=107, version=0}
+
+Pass01=117
+
+# acme.entities.password.Password{id=117, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 117
+# 	- version: int = 0
+# 	from acme.entities.password.Password:
+# 	- serialVersionUID: long = 1
+# 	- pass: java.lang.String = "passdeEjemplo"
+# 	- Ejuno: acme.entities.ejuno.Ejuno = acme.entities.ejuno.Ejuno{id=114, version=0}
 
