--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$pJwz1QoEYTFAvkrM3lNhvu8vV4YaIWjTo6NKlT66x5HVKSSF99pCG"
+# 	- password: java.lang.String = "$2a$05$eODCdJ.nsH82GVsU4m5or.mtdB4w5cQFUGWzOq3MWHeTQ17xBnVJa"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$bCcyGmd8f9vmzRDa8DFuy.fxX.QI3cEiDimjiIPQHHj2mgoy9h.dm"
+# 	- password: java.lang.String = "$2a$05$bUG3GyinJoOi8nbJ3/3ieela2rejfi7vsLRPv0lJT6gO/hBekLYae"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$L59.Awnm0GCZ9FG1Qozm0eca6AXCGgxA6w1w3XC/inr8jkq.WT0x6"
+# 	- password: java.lang.String = "$2a$05$/kYItKd.vJQClXX31fXdsOlSasH9pfDKmaHKVQTdgBBzFJ4e9VCj6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$EAPI06/kDzCYHe/Lx1NOKevyJXD2KpPNRkRMjLXr1.aUeMcjaaQ3."
+# 	- password: java.lang.String = "$2a$05$MiGWp2SIr3MZMJHz9g29K.LF.BmgqxAVXUiieVgLZRTvbeNHaoFZ2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$WT4XcJusW8oAZPS2qS2G5eNqmWOIW1ScQ3BnjxIh3zUlV5GwL.Foq"
+# 	- password: java.lang.String = "$2a$05$kIkNC4DbjDkfqyLvFMfxGubWCu3aEo5pL5UR65nuBeVePpjUf20N2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$X0pU7MxaWlAG5eYoiHRdwObIuguMIK26SGuyu1IJEnFg.VQO0ILDu"
+# 	- password: java.lang.String = "$2a$05$jo4twg9RuxITF8gtiR/6Cu8suNsPIJUrHLme8NBw5bXROP9aJUJY2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$Eq/0IbNf98c41bqOnU1hv.vp0VhaLYCP9HWlAaFzTJybvG5bCj3gS"
+# 	- password: java.lang.String = "$2a$05$y3hZEcDWxq.Wm/4TClAXpei.VVVOWuXAB.CPwD8KIdowJyiFuxSpy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$8MSL4JMoLkPrWsTOESkZfOYmZINVDD4/oU.pG3v0nSKx1iF1fzATC"
+# 	- password: java.lang.String = "$2a$05$OM4Of0glsUKzL1ZywZsfMuMz3zUIFBq2uhe0H.pKddmL6pJMlc/Ke"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$ZZ/RL65bQSgRunoom6cn7uTeZoQ9njUNwPI.kRC4j.c7hzcBTMpGe"
+# 	- password: java.lang.String = "$2a$05$SIx.YsuuHzOMZRW019j7FugXLu0yk4tpYPkzFN7iBuz6xeuyjX9EW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$710VM8JIchtL7TnIZPWmpunqFJ4YVPUjhwjzFPieE/Ds8MB539nNG"
+# 	- password: java.lang.String = "$2a$05$ynHUjnBiD5Cjq/FERzOsq.bGmk/TuIzOVXqKO9bhXqq0hfDLp3Ci6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$OcIrBAP1BAo0Wn1HucMriOU99C0ELBNchHIwkHRdc.A6lE6xGIv1C"
+# 	- password: java.lang.String = "$2a$05$FkfAjU0bBhSnCFp8rs3g3eGfaFc0grrdKYG8uWVvR6uSDm0ZYFC8q"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
@@ -1862,6 +1862,6 @@ Pass01=117
 # 	- version: int = 0
 # 	from acme.entities.password.Password:
 # 	- serialVersionUID: long = 1
-# 	- pass: java.lang.String = "passdeEjemplo"
+# 	- pass: java.lang.String = "i7j9h8..."
 # 	- Ejuno: acme.entities.ejuno.Ejuno = acme.entities.ejuno.Ejuno{id=114, version=0}
 
