--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$eODCdJ.nsH82GVsU4m5or.mtdB4w5cQFUGWzOq3MWHeTQ17xBnVJa"
+# 	- password: java.lang.String = "$2a$05$HQYdts6W8xmcS0.DNFFBSOl/ZzYveTmwGtPb97aQ1JiPatDRcM1BG"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$bUG3GyinJoOi8nbJ3/3ieela2rejfi7vsLRPv0lJT6gO/hBekLYae"
+# 	- password: java.lang.String = "$2a$05$XLyDXANsds.eueygfmUCKuUqtgJA7w5OE0tGwwxh2zm4aU7wu0KYW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$/kYItKd.vJQClXX31fXdsOlSasH9pfDKmaHKVQTdgBBzFJ4e9VCj6"
+# 	- password: java.lang.String = "$2a$05$wX9eMNGDjUiYrR4VvWIva.vyhxuVlWbPwjkWbCULToiuHXg1Fr/aO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$MiGWp2SIr3MZMJHz9g29K.LF.BmgqxAVXUiieVgLZRTvbeNHaoFZ2"
+# 	- password: java.lang.String = "$2a$05$LXFSmOipydwhxcbQKv.32upC1qyELZN9RmwB4mc8ZIoiHxgQj0GnG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$kIkNC4DbjDkfqyLvFMfxGubWCu3aEo5pL5UR65nuBeVePpjUf20N2"
+# 	- password: java.lang.String = "$2a$05$1dhwfPqAcvRFxXGrbYInw.SLr.zUD4Al7DNYwHL9aEydHaXFPvMda"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$jo4twg9RuxITF8gtiR/6Cu8suNsPIJUrHLme8NBw5bXROP9aJUJY2"
+# 	- password: java.lang.String = "$2a$05$EW0eWbTDOV1kx2vEpgBVCeoMGf0BVwrIcmDOXvA82DAviO6XjlKMq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$y3hZEcDWxq.Wm/4TClAXpei.VVVOWuXAB.CPwD8KIdowJyiFuxSpy"
+# 	- password: java.lang.String = "$2a$05$2mY93Hb4inslZfDSAaCcb.Yp8neEOu07KxzI/7gjQkbzm3.IqnmQm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$OM4Of0glsUKzL1ZywZsfMuMz3zUIFBq2uhe0H.pKddmL6pJMlc/Ke"
+# 	- password: java.lang.String = "$2a$05$TR..GH7pFJxIZNw.OQKis.D8q7R39gfMTy0cz9emmriaB/WtD77kO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$SIx.YsuuHzOMZRW019j7FugXLu0yk4tpYPkzFN7iBuz6xeuyjX9EW"
+# 	- password: java.lang.String = "$2a$05$YQ77hPHPgmFEwSrT9AefMeMs38/82lp8dX3czclPu5pGwGrBLsuQi"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$ynHUjnBiD5Cjq/FERzOsq.bGmk/TuIzOVXqKO9bhXqq0hfDLp3Ci6"
+# 	- password: java.lang.String = "$2a$05$A/Bp5D/6BEat3/DGTP8VOO.r1Q3sxPQU6JZCIQNLs/eWU/dWceXye"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$FkfAjU0bBhSnCFp8rs3g3eGfaFc0grrdKYG8uWVvR6uSDm0ZYFC8q"
+# 	- password: java.lang.String = "$2a$05$zhMmDWDWnNwiBUREp2eBeeXAdH4Q5m8YNLw8FT.osBe17/WJOFtDy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
